--- a/moodbile/themes/moodbile/css/moodbile.css
+++ b/moodbile/themes/moodbile/css/moodbile.css
@@ -1,49 +1,31 @@
 body {font-family: Verdana, Arial, Helvetica;font-size: 1em;background-image: url(../images/background.png); height: 356px; width: 320px;}
 a{text-decoration: none;}
-header {text-align: center; margin-top: 10px;}
+header {text-align: center; margin-top: 10px; position:relative;}
 #content header h1{margin:0 auto; width: 310px; height: 50px; background:transparent url(../images/logo.png) no-repeat scroll 75px 0; text-indent: -9999px;}
 ul {list-style-image:none;list-style-position:outside;list-style-type:none;}
 ul li{padding: 5px; }
 dialog, dl {}
-dt{background-color:#E6E6E6;
-border-bottom:1px solid #999999;
-border-top:1px solid #999999;
-color:#666666;
-font-size:0.7em;
-font-weight: bold;
-padding:2px;
-height: 30px;}
-dd{font-size:0.8em;margin-bottom:8px;padding:5px;min-height: 40px;}
+dt{}
+dd{}
 #container{position:relative; overflow: auto; height: 100%; top: 0;}
-.content {min-height: 100%; top: 0; width: 320px; float: left; width:100%;}
+.content {min-height: 100%; top: 0; width: 320px; float: left; width:100%; position: relative;}
 #info-viewer .content {}
 #wrapper {margin: 10px 0; position: relative; padding-bottom: 60px;}
-#user-profile {
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 10px;
-    background-position:-27px 50%;
-    border:1px solid #999;
-    height:50px;
-    margin-right:5px;
-    margin-top:-50px;
-    float: right;
-    width:50px;
-    z-index:100;
-    -moz-box-shadow:0 1px 4px #999999;
-    -webkit-box-shadow:0 1px 4px #999999;
-}
+
+/* navigationbar */
 nav#toolbar {
     font-size: 0.6em;
     text-align: center;
     position: fixed;
     bottom: 0;
-    display: block;
+    display: none;
     width: 320px;
     background-image: url(../images/navigation-background.png);
     background-repeat: repeat-x;
     height:50px;
     font-weight: bold;
     z-index: 0;
+    overflow: hidden;
 }
 nav#toolbar ul {
     position: relative;
@@ -55,19 +37,22 @@ nav#toolbar li {
     height:30px;
     margin:0 5px;
     padding:0 5px;
-    width:40px;
+    width:44px;
 }
 nav#toolbar a{color: #959595;}
 nav#toolbar li.active a{
     text-shadow: 0 0 5px #fff;
     color: #fff
 }
+
+/* Sections */
 section {
     background-color: #fff;
     border:1px solid #999;
     margin: 5px;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
+    position: relative;
 }
 section a{
     font-weight: bold;
@@ -95,6 +80,79 @@ section div div, #info-viewer div div div {border-bottom: 0;}
 
 footer {font-size: 0.8em;text-align: center;}
 
+/* user */
+#user-profile {
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    background-position:-27px 50%;
+    border:0;
+    height:50px;
+    margin-right:5px;
+    margin-top:-50px;
+    float: right;
+    width:50px;
+    z-index:100;
+    -moz-box-shadow:0 1px 3px #4F4F4F;
+    -webkit-box-shadow:0 1px 3px #4F4F4F;
+}
+#user-options {
+    background-image:url("../images/login-op-decoration.png");
+    background-position:76px top;
+    background-repeat:no-repeat;
+    position:absolute;
+    right:5px;
+    top:55px;
+    z-index:9999;
+}
+#user-options ul{
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-box-shadow:0 1px 3px #000;
+    -webkit-box-shadow:0 1px 3px #000;
+    background-image:url("../images/80-trans-background.png");
+    margin-top:15px;
+    padding:5px;
+    width:100px;
+}
+#user-options ul li{}
+#user-options ul li a{color: #fff;font-weight: bold;}
+section.authentication{
+    padding: 5px;
+}
+section.authentication .login-info #login-button, section.authentication .login-form button {
+    background: -webkit-gradient(linear, left top, left bottom, from(#7DB3DF), to(#336699));
+    border: 1px solid #006699;
+    color: #fff;
+    display:block;
+    -webkit-border-radius: 10px; 
+    -moz-border-radius: 10px;
+    font-weight: bold;
+    font-size: 1em;
+    padding: 5px;
+    margin: 10px auto;
+}
+section.authentication .login-form {border-bottom: 0;}
+section.authentication .login-form input[type='text'], section.authentication .login-form input[type='password'] {
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    background-color:#FFFFFF;
+    border:1px solid #999999;
+    clear:both;
+    color:#999999;
+    display:block;
+    font-size:1em;
+    font-style:italic;
+    margin:5px auto;
+    text-align:center;
+    width:200px;   
+}
+section.authentication .site-summary {padding: 5px; font-size: 0.8em;}
+section.authentication .site-summary p {padding: 5px 0;}
+section.authentication input.invalid-input {
+    color: #F00 !important;
+    border-color: #f00 !important;
+}
+
 /* Foro */
 .replyes div, .description, .info .summary {border-bottom: 0;padding: 10px 20px;font-size: 0.7em;}
 .posts em {font-size: 0.7em;}
@@ -102,10 +160,6 @@ footer {font-size: 0.8em;text-align: center;}
 
 /* Notifications */
 span.notification-num{
-   -moz-border-radius:10px;
-   -webkit-border-radius: 10px;
-    background-color:#FF0000;
-    color:#FFFFFF;
     font-size:0.8em;
     height:14px;
     padding:1px;
@@ -116,17 +170,59 @@ span.notification-num{
     width:14px;
     display:block;
 }
-
-
+span.notification-num.loaded{
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    background-color:#FF0000;
+    color:#FFFFFF;
+}
+span.notification-num.loading{
+    background-image: url(../images/miniloader.gif);
+    background-repeat: no-repeat;
+    background-position: right top;
+}
+/* User */
+#user-filter {
+    position: relative;
+}
+#user-filter-input {
+    width: 80%;
+    border: 0;
+    font-size: 1em;
+    margin: 5px;
+    font-style: italic;
+    color: #999;
+    background-color:#fff;
+}
+#mached-num {
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    background-color:#e6e6e6;
+    color:#FFFFFF;
+    font-size:0.9em;
+    height:10px;
+    line-height:9px;
+    padding:3px;
+    position:absolute;
+    right:10px;
+    text-align:center;
+    top:10px;
+    width:10px;
+}
 /* Navigation icons */
-#courses a{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;line-height:70px;text-indent:-3px;}
-#resources a{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -30px 0;line-height:70px;text-indent:-10px;}
-#forum a{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -60px 0;line-height:70px;text-indent:0;}
-#events a{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -90px 0;line-height:70px;text-indent:-6px;}
-#grade a{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -120px 0;line-height:70px;text-indent:-6px;}
+nav#toolbar li#courses a{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;line-height:70px;text-indent:-3px;}
+nav#toolbar li#more a{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -180px 0;line-height:70px;text-indent:-6px;}
+
+nav#toolbar li#resources a, .toolbar-more div#resources span{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -30px 0;line-height:70px;text-indent:-10px;}
+nav#toolbar li#forums a, .toolbar-more div#forums span{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -60px 0;line-height:70px;text-indent:0;}
+nav#toolbar li#events a, .toolbar-more div#events span{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -90px 0;line-height:70px;text-indent:-6px;}
+nav#toolbar li#grade a, .toolbar-more div#grade span{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -120px 0;line-height:70px;text-indent:-6px;}
+nav#toolbar li#users a, .toolbar-more div#users span{display:block; width: 30px; height: 40px;background: url(../images/navigation-icons.png);background-repeat: no-repeat;background-position: -150px 0;line-height:70px;text-indent:-6px;}
+.toolbar-more div span{float:left;margin-top:-6px;margin-right: 5px;}
 
 /* Loading */
 #loading {
+    display: none;
     position: fixed;
     top: 0;left: 0px;
     width:100%;height: 100%;
@@ -196,7 +292,7 @@ nav#breadcrumb li#home span{background:transparent url(../images/breadcrumb.png)
     height:20px;
     position:absolute;
     right:5px;
-    top:5px;
+    top:-25px;
     width:20px;
     background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#414141));
     border: 1px solid #000;color: #fff; -webkit-border-radius: 5px; -moz-border-radius: 5px;font-weight: bold;
@@ -223,7 +319,18 @@ border: 1px solid #006699;color: #fff; -webkit-border-radius: 5px; -moz-border-r
 background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#414141));
 border: 1px solid #000;color: #fff; -webkit-border-radius: 5px; -moz-border-radius: 5px;font-weight: bold;
 }
-#info-viewer .post dt {padding: 0; line-height: 15px;}
+#info-viewer .post dt {
+    padding: 0; 
+    line-height: 15px;
+    background-color:#E6E6E6;
+    border-bottom:1px solid #999999;
+    border-top:1px solid #999999;
+    color:#666666;
+    font-size:0.7em;
+    font-weight: bold;
+    height: 30px;
+}
+#info-viewer .post dd{font-size:0.8em;margin-bottom:8px;padding:5px;min-height: 40px;}
 
 /* Avatar */
 #info-viewer .avatar, #wrapper .avatar {float:left;height:30px;overflow:hidden;margin-left:3px;margin-right:3px;margin-top: 3px;width:30px;background-position: -2px -2px;}
@@ -232,6 +339,18 @@ border: 1px solid #000;color: #fff; -webkit-border-radius: 5px; -moz-border-radi
 #info-viewer .post .avatar {-webkit-border-radius: 0;-moz-border-radius: 0;border: 0;border-right: 1px solid #999;background-position: -1px -1px; margin:0 5px 0 0;}
 #info-viewer .content.user .avatar{margin-top: -7px;margin-left: -7px;-webkit-border-radius: 0;-moz-border-radius: 0;border: 0;border-right: 1px solid #999;}
 
+/* Mensajes */
+.msg {
+    border:1px solid;
+    display:block;
+    font-size:0.7em;
+    margin:5px;
+    padding:5px;
+    text-align:center;
+}
+.msg.msg-alert {background-color:#FFFFEF;border-color:#FEFF8F;}
+.msg.msg-error {background-color:#FFCFCF;border-color:#F00;color:#F00;}
+.msg.msg-empty {border-color:#fff; color: #999;}
 /* icons */
 .icon-pdf{
     background:transparent url(../images/icons.gif) no-repeat scroll 0 -1px;
