--- a/moodbile/themes/moodbile/css/moodbile.css
+++ b/moodbile/themes/moodbile/css/moodbile.css
@@ -276,9 +276,8 @@ nav#breadcrumb li#home span{background:transparent url(../images/breadcrumb.png)
 /* extra information */
 .info {position: relative;display: block;}
 .more {font-size:0.6em;padding:0; position: absolute; right:0;top:-28px;}
-.courses .more{right:16px;}
 .more a{padding: 3px;}
-.data {font-size:0.8em;font-weight:normal;line-height:17px; padding: 10px 20px;}
+.date {font-size:0.8em;font-weight:normal;line-height:17px; padding: 10px 20px;}
 
 /* info-viewer */
 #info-viewer {position: relative; width: 310px; margin-left: 320px;float: left;}
@@ -399,6 +398,7 @@ border: 1px solid #000;color: #fff; -webkit-border-radius: 5px; -moz-border-radi
     display:inline-block;
     height:16px;
     width:16px;
+    margin-right:16px;
 }
 .icon-email{
     background:transparent url(../images/icons.gif) no-repeat scroll 0 -180px;
