Update 26/04/10 - adding support for Moodle WebServices

--- a/moodbile/misc/templates/frontpage.tpl.html
+++ b/moodbile/misc/templates/frontpage.tpl.html
@@ -1,9 +1,1 @@
-<section class="moodbile-frontpage">
-    <div class="moodbile-frontpage-fragment">
-        <div class="moodbile-course-section">
-            <div>
-                <a href="#"><span class="moodbile-icon"/></a>
-            </div>
-        </div>
-    </div>
-</section>
+<div class="moodbile-frontpage"/>
