--- a/moodbile/misc/templates/posts.tpl.html
+++ b/moodbile/misc/templates/posts.tpl.html
@@ -1,18 +1,18 @@
 <section class="moodbile-posts">
     <div class="moodbile-post">
-        <div class="avatar"/>
-        <div class="moodbile-post-title">
-            <a href="#"/>
-        </div>
+        <span class="moodbile-avatar"/>
+        <a class="moodbile-post-title" href="#"/>
         <div class="moodbile-post-replyes">
-            <dialog>
-                <dt class="moodbile-post-reply">
-                    <span class="avatar"/>
-                    <span class="moodbile-post-reply-title"/><br />
-                    <a class="user" href="#"/>
-                </dt>
-                <dd class="moodbile-post-reply-msg" />
-            </dialog>
+            <div class="moodbile-post-reply">
+                <a class="user" href="#">
+                    <div class="moodbile-post-reply-header">
+                        <span class="moodbile-avatar"/>
+                        <div class="moodbile-post-reply-title"/>
+                        <div class="moodbile-post-reply-autor"/>
+                    </div>
+                </a>
+                <div class="moodbile-post-reply-msg"></div>
+            </div>
         </div>
     </div>
 </section>
