--- a/moodbile/misc/templates/courses.tpl.html
+++ b/moodbile/misc/templates/courses.tpl.html
@@ -4,6 +4,7 @@
             <a class="course-title" href="#"/>
             <a class="collapse" href="#"><span class="icon-info"/></a>
             <div class="info collapsible collapsed">
+                <div class="fullname"/>
                 <div class="summary"/>
             </div>
         </div>
