--- a/moodbile/misc/templates/forums.tpl.html
+++ b/moodbile/misc/templates/forums.tpl.html
@@ -1,5 +1,9 @@
 <section class="moodbile-forums">
     <div class="moodbile-forum">
         <a href="#" class="moodbile-forum-title"><span class="moodbile-icon"/></a>
+        <div class="info">
+            <a href="#" class="collapse more"><span class="icon-info"/></a>
+            <div class="description collapsible collapsed"/>
+        </div>
     </div>
 </section>
