--- a/moodbile/misc/templates/info-viewer.tpl.html
+++ b/moodbile/misc/templates/info-viewer.tpl.html
@@ -1,9 +1,16 @@
 <section class="moodbile-info-view">
     <header class="moodbile-info-view-title">
-        <button class="back">
-            <span class="moodbile-icon icon-back"/>
-        </button>
         <h1></h1>
+        <span class="opts">
+            <button class="back">
+                <span class="moodbile-icon icon-back"/>
+            </button>
+            <button class="close">
+                <span class="moodbile-icon icon-close"/>
+            </button>
+        </span>
     </header>
-    <div class="content"/>
+    <div class="moodbile-info-view-content">
+        <div class="content"/>
+    </div>
 </section>
