--- a/moodbile/misc/templates/resources.tpl.html
+++ b/moodbile/misc/templates/resources.tpl.html
@@ -1,11 +1,9 @@
 <section class="moodbile-resources">
     <div class="moodbile-resource">
         <a href="#" class="moodbile-resource-title"><span class="moodbile-icon"/></a>
-        <div class="info collapsed">
-            <span class="more visible">
-                <a href="#" class="collapsible"><span class="icon-info"/></a>
-            </span>
-            <div class="description"/>
+        <div class="info">
+            <a href="#" class="collapse more"><span class="icon-info"/></a>
+            <div class="description collapsible collapsed"/>
         </div>
     </div>
 </section>
