--- a/moodbile/themes/default/css/style.css
+++ b/moodbile/themes/default/css/style.css
@@ -2,7 +2,6 @@
 body {
     font-family: Verdana, Arial, Helvetica;
     font-size: 1em;
-    width: 320px;
     color: #666;    
 }
 a{
@@ -32,7 +31,6 @@ input[type='text'], input[type='password'] {
 /* Default theme */
 #container{
     position:relative;
-    height: 100%;
     top: 0;
 }
 
@@ -51,14 +49,12 @@ a.sitename{
     height: 35px;
     padding:10px !important;
     text-shadow: 1px 1px 0 #e6e6e6;
-    background:transparent url(../images/logo.png) no-repeat scroll 75px 0;
+    background:transparent url(../images/logo.png) no-repeat scroll center 0;
 }
 
 /* Content */
 .content { 
-    min-height: 100%;
     top: 0;
-    width: 320px;
     float: left;
     width:100%;
     position: relative;
@@ -67,19 +63,19 @@ a.sitename{
     position: relative;
 }
 
-/* Loading */
-#loading {
+/* Mask */
+#mask {
     display: none;
     position: fixed;
     top: 0;left: 0px;
-    width:100%;height: 100%;
+    width:100%; height: 100%;
     opacity: 0.5;
     background: #000;
     color: #fff;
     overflow: hidden;
     z-index: 9999;
 }
-#loading div {
+#mask div {
     background-image: url(../images/preload.gif);
     background-repeat: no-repeat;
     background-position: center center;
@@ -122,32 +118,30 @@ nav#toolbar {
     font-size: 0.6em;
     text-align: center;
     display: none;
-    width: 320px;
     background: -webkit-gradient(linear,left bottom,left top,color-stop(0.35, rgb(210,210,210)),color-stop(1, rgb(240,240,240)));
     background: -moz-linear-gradient(center bottom, rgb(210,210,210) 35%, rgb(240,240,240) 100% );
     font-weight: bold;
     z-index: 0;
     height:32px;
+    border-bottom: 1px solid #F90;
+    border-top: 1px solid #fff;
 }
 nav#toolbar li {
     display: inline-block;
-    height:20px;
+    height:22px;
     line-height:20px;
     position:relative;
-    width:54px;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #F90;
+    width:17%;
     overflow: hidden;
 }
 nav#toolbar a { 
     color: #333;
     text-shadow: 1px 1px 0 #e6e6e6;
+    display: block;
 }
 nav#toolbar li.active{
     background: -webkit-gradient(linear,left bottom,left top,color-stop(0.35, #FF9900),color-stop(0.68, #FFCD7F));
     background: -moz-linear-gradient(center bottom,#FF9900 35%,#FFCD7F 68%);
-    border-top: 1px solid #fff5da;
-    border-bottom: 1px solid #f90;
 }
 
 /* user */
@@ -190,10 +184,10 @@ nav#toolbar li.active{
 #user-options ul li a{color: #fff;font-weight: bold;display: block;}
 
 /* Avatar */
-#info-viewer .avatar, #wrapper .avatar {float:left;height:30px;overflow:hidden;margin-left:3px;margin-right:3px;margin-top: 3px;width:30px;background-position: -2px -2px;}
-.grade .avatar, .post .avatar {-moz-border-radius: 8px; -webkit-border-radius: 8px; border: 0;}
-#info-viewer .avatar {-webkit-border-radius: 10px;-moz-border-radius: 5px;border: 1px solid #999;background-position: -25px -30px;}
-#info-viewer .post .avatar {-webkit-border-radius: 0;-moz-border-radius: 0;border: 0;border-right: 1px solid #999;background-position: -1px -1px; margin:0 5px 0 0;}
+#info-viewer .moodbile-avatar, #wrapper .avatar {float:left;height:30px;overflow:hidden;margin-left:3px;margin-right:3px;margin-top: 3px;width:30px;background-position: -2px -2px;}
+.grade .moodbile-avatar, .post .moodbile-avatar {-moz-border-radius: 8px; -webkit-border-radius: 8px; border: 0;}
+#info-viewer .moodbile-avatar {-webkit-border-radius: 10px;-moz-border-radius: 5px;border: 1px solid #999;background-position: -25px -30px;}
+#info-viewer .moodbile-avatar {-webkit-border-radius: 0;-moz-border-radius: 0;border: 0;border-right: 1px solid #999;background-position: -1px -1px; margin:0 5px 0 0;}
 #info-viewer .content.user .avatar{margin-top: -7px;margin-left: -7px;-webkit-border-radius: 0;-moz-border-radius: 0;border: 0;border-right: 1px solid #999;}
 
 /* Sections */
@@ -207,7 +201,7 @@ section a{
     display: block;
     padding: 10px;
 }
-section div, #info-viewer div div{
+section div{
     padding: 5px;
     border-bottom: 1px solid #e6e6e6;
     padding: 0;
@@ -221,15 +215,22 @@ section div div, #info-viewer div, #info-viewer div div div {
 #info-viewer {
     background-color: #fff;
     position: absolute;
-    width: 320px;
     z-index: 9999;
     color: #333;
+    width: 100%;
 }
 #info-viewer div div {
-    padding: 10px;
+    padding: 0;
+    border-bottom: 0;
+}
+#info-viewer div div div{
+    border-bottom: 1px solid #e6e6e6;
+}
+#info-viewer div div div div{
+    border: 0;
 }
 #info-viewer div a {
-    padding: 0;
+    padding: 10px;
 }
 #info-viewer header {
     height: 30px;
@@ -261,8 +262,70 @@ section div div, #info-viewer div, #info-viewer div div div {
     background: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(230,230,230)),color-stop(1, rgb(181,181,181)));
     background: -moz-linear-gradient(center bottom,rgb(230,230,230) 0%,rgb(181,181,181) 100%);
 }
-#info-viewer .content p{
+#info-viewer header .close {
+    padding:0;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    height: 20px;
+    border: 1px solid #999;
+    color: #000;
+    text-shadow: 1px 1px 0 #e6e6e6;
+    font-weight: bold;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    background: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(230,230,230)),color-stop(1, rgb(181,181,181)));
+    background: -moz-linear-gradient(center bottom,rgb(230,230,230) 0%,rgb(181,181,181) 100%);
+}
+#info-viewer .moodbile-info-view-content {
+    position: relative;
+}
+#info-viewer .moodbile-info-view-content div.content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+}
+#info-viewer .moodbile-info-view-content div.content p {
     padding: 5px 10px;
+}
+
+/* Authentication */
+.moodbile-authentication{
+    padding: 5px;
+}
+.moodbile-authentication .login-form #login-button, .section.authentication .login-form button {
+    background: -webkit-gradient(linear, left top, left bottom, from(#7DB3DF), to(#336699));
+    border: 1px solid #006699;
+    color: #fff;
+    display:block;
+    -webkit-border-radius: 10px; 
+    -moz-border-radius: 10px;
+    font-weight: bold;
+    font-size: 1em;
+    padding: 5px;
+    margin: 10px auto;
+}
+.moodbile-authentication .login-form {border-bottom: 0;}
+.moodbile-authentication .login-form input[type='text'], .moodbile-authentication .login-form input[type='password'] {
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    background-color:#FFFFFF;
+    border:1px solid #999999;
+    clear:both;
+    color:#999999;
+    display:block;
+    font-size:1em;
+    font-style:italic;
+    margin:5px auto;
+    text-align:center;
+    width:200px;   
+}
+.moodbile-authentication .site-summary {padding: 5px; font-size: 0.8em;}
+.moodbile-authentication .site-summary p {padding: 5px 0;}
+.moodbile-authentication input.invalid-input {
+    color: #F00 !important;
+    border-color: #f00 !important;
 }
 
 /* Frontpage */
@@ -293,6 +356,39 @@ section div div, #info-viewer div, #info-viewer div div div {
 }
 .moodbile-grades .grade .grade-num.green {}
 .moodbile-grades .grade .grade-num.red {}
+
+/* Foros */
+.moodbile-post-replyes {
+    display: none;
+}
+.moodbile-post-reply-button {
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border:1px solid #000;
+    border: 1px solid #999;
+    color: #000;
+    text-shadow: 1px 1px 0 #e6e6e6;
+    font-weight:bold;
+    height:20px;
+    position:absolute;
+    right:55px;
+    top:-26px;
+    background: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(230,230,230)),color-stop(1, rgb(181,181,181)));
+    background: -moz-linear-gradient(center bottom,rgb(230,230,230) 0%,rgb(181,181,181) 100%);
+}
+#info-viewer #replyPost{ background-color:#CFCFCF;border-bottom:1px solid #e6e6e6; padding:5px;}
+#info-viewer #replyPost textarea{width: 210px; -moz-border-radius: 8px; -webkit-border-radius: 8px;border: 1px solid #999; height: 50px;}
+#info-viewer #replyPost button{
+    background: -webkit-gradient(linear, left top, left bottom, from(#7DB3DF), to(#336699));
+    border: 1px solid #006699;color: #fff;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    font-weight: bold;
+    height: 25px;
+    float:right;
+    margin-top:27px;
+}
+#info-viewer #replyPost button[disabled="disabled"]{opacity: 0.5;}
 
 /* Footer */
 footer {
@@ -442,6 +538,5 @@ a.collapse {
     font-size:0.7em;
     padding:7px 12px;
 }
-.more {padding:0; position: absolute; right:0;top:-28px;}
-.more a{padding: 3px;}
+.more {padding:2px 5px;top:-28px !important;}
 .date {font-size:0.8em;font-weight:normal;line-height:17px; padding: 10px 20px;}
