Update 16/06/10 - Connectig with Moodle

--- a/moodbile/misc/templates/authentication.tpl.html
+++ b/moodbile/misc/templates/authentication.tpl.html
@@ -1,4 +1,4 @@
-<section class="moodbile-authentication">
+<div class="moodbile-authentication">
     <div class="login-form">
         <form>
             <input type="text" id="login-form-input-user" />
@@ -7,4 +7,4 @@
         <button id="login-button" type="submit"></button>
     </div>
     <div class="login-info"></div>
-</section>
+</div>
