--- a/moodbile/misc/templates/courses.tpl.html
+++ b/moodbile/misc/templates/courses.tpl.html
@@ -1,10 +1,11 @@
-<section class="moodbile-courses">
-    <div class="moodbile-course">
-        <a class="course-title" href="#"></a>
-        <a class="collapse" href="#"><span class="moodbile-icon icon-info"></span></a>
-        <div class="info collapsible collapsed">
-            <div class="fullname"></div>
-            <div class="summary"></div>
-        </div>
-    </div>
-</section>
+<div class="moodbile-courses moodbile-course">
+    <a class="moodbile-course-title" href="#">
+        <span class="moodbile-icon"></span>
+        <div class="moodbile-course-fullname"></div>
+        <div class="moodbile-course-shortname"></div>    
+    </a>
+    <a class="collapse" href="#"><span class="moodbile-icon icon-info">i</span></a>
+    <details class="collapsible collapsed">
+        <div class="summary"></div>
+    </details>
+</div>
