--- a/moodbile/misc/templates/forums.tpl.html
+++ b/moodbile/misc/templates/forums.tpl.html
@@ -1,10 +1,8 @@
-<section class="moodbile-forums">
-    <a href="#" class="moodbile-course-name collapse"></a>
-    <div class="moodbile-forum collapsible expanded">
-        <a href="#" class="moodbile-forum-title"><span class="moodbile-icon"></span></a>
-        <div class="info">
-            <a href="#" class="collapse more"><span class="moodbile-icon icon-info"></span></a>
-            <div class="description collapsible collapsed"></div>
-        </div>
-    </div>
-</section>
+<a href="#" class="moodbile-course-name collapse"><span class="moodbile-icon"></span></a>
+<div class="moodbile-forum">
+    <a href="#" class="moodbile-forum-title"><span class="moodbile-icon"></span></a>
+    <a href="#" class="collapse"><span class="moodbile-icon icon-info">i</span></a>
+    <details class="collapsible collapsed">
+        <div class="intro"></div>
+    </details>
+</div>
