--- a/moodbile/misc/templates/user-options.tpl.html
+++ b/moodbile/misc/templates/user-options.tpl.html
@@ -2,6 +2,7 @@
     <div id="user-welcome"></div>
     <button id="user-profile"></button>
     <nav id="user-nav">
+        <span class="moodbile-icon icon-user-op-decoration"></span>
         <ul>
             <li id="user-options-profile">
                 <a href="#"></a>
