--- a/moodbile/misc/templates/events.tpl.html
+++ b/moodbile/misc/templates/events.tpl.html
@@ -1,10 +1,10 @@
-<section class="moodbile-events">
-    <div class="moodbile-event">
-        <a href="#" class="moodbile-event-title"><span class="moodbile-icon"></span></a>
-        <div class="info">
-            <a href="#" class="collapse more"><span class="moodbile-icon icon-info"></span></a>
-            <!--<div class="date"></div>-->
-            <div class="description collapsible collapsed"></div>
-        </div>
-    </div>
-</section>
+<a href="#" class="moodbile-event-date"></a>
+<div class="moodbile-event">
+    <a class="moodbile-event-link">
+        <span class="moodbile-icon"></span>
+        <div class="moodbile-event-title"></div>
+        <div class="moodbile-event-course"></div>
+    </a>
+    <a href="#" class="collapse more"><span class="moodbile-icon icon-info">i</span></a>
+    <details class="collapsible collapsed"></details>
+</div>
