--- a/moodbile/misc/templates/posts.tpl.html
+++ b/moodbile/misc/templates/posts.tpl.html
@@ -1,23 +1,23 @@
-<section class="moodbile-posts">
+<div class="moodbile-discussions">
+    <div class="moodbile-discussion">
+        <a class="moodbile-discussion-link" href="#">
+            <div class="moodbile-discussion-header">
+                <span class="moodbile-avatar"></span>
+                <div class="moodbile-discussion-title"></div>
+                <div class="moodbile-discussion-autor"></div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="moodbile-posts">
     <div class="moodbile-post">
-        <a class="moodbile-post-link" href="#">
+        <a class="moodbile-post-link user" href="#">
             <div class="moodbile-post-header">
                 <span class="moodbile-avatar"></span>
                 <div class="moodbile-post-title"></div>
                 <div class="moodbile-post-autor"></div>
             </div>
         </a>
-        <div class="moodbile-post-replyes">
-            <div class="moodbile-post-reply">
-                <a class="user" href="#">
-                    <div class="moodbile-post-reply-header">
-                        <span class="moodbile-avatar"></span>
-                        <div class="moodbile-post-reply-title"></div>
-                        <div class="moodbile-post-reply-autor"></div>
-                    </div>
-                </a>
-                <div class="moodbile-post-reply-msg"></div>
-            </div>
-        </div>
+        <div class="moodbile-post-msg"></div>
     </div>
-</section>
+</div>
