--- a/moodbile/misc/templates/resources.tpl.html
+++ b/moodbile/misc/templates/resources.tpl.html
@@ -1,10 +1,11 @@
-<section class="moodbile-resources">
-    <a href="#" class="moodbile-course-name collapse"></a>
-    <div class="moodbile-resource collapsible expanded">
-        <a href="#" class="moodbile-resource-title"><span class="moodbile-icon"></span></a>
-        <div class="info">
-            <a href="#" class="collapse more"><span class="moodbile-icon icon-info"></span></a>
-            <div class="description collapsible collapsed"></div>
-        </div>
-    </div>
-</section>
+<a href="#" class="moodbile-course-name"><span class="moodbile-icon"></span></a>
+<div class="moodbile-resource">
+    <a href="#" class="moodbile-resource-link">
+        <span class="moodbile-icon"></span>
+        <div class="moodbile-resource-title"></div>
+    </a>
+    <a href="#" class="collapse more"><span class="moodbile-icon icon-info">i</span></a>
+    <details class="collapsible collapsed">
+        <div class="intro"></div>
+    </details>
+</div>
