--- a/moodbile/themes/default/css/style.css
+++ b/moodbile/themes/default/css/style.css
@@ -1,9 +1,11 @@
 /* Basic reset */
 body {
     font-family: Verdana, Arial, Helvetica;
-    font-size: 1em;
+    font-size: 16px;
     color: #666;
-    line-height: 1em;
+    line-height: 16px;
+    letter-spacing: normal;
+    -webkit-text-size-adjust: none;
 }
 a{
     text-decoration: none; color: #333;
@@ -24,7 +26,7 @@ input[type='text'], input[type='password'] {
     border:1px solid #999999;
     clear:both;
     color:#999999;
-    font-size:1em;
+    font-size:16px;
     font-style:italic;
     margin:10px;  
 }
@@ -42,12 +44,12 @@ input[type='text'], input[type='password'] {
 }
 a.sitename{
     display: block;
-    font-size:1.5em;
+    font-size:20px;
     text-indent: -9999px;
     height: 35px;
     padding:10px !important;
     text-shadow: 1px 1px 0 #e6e6e6;
-    background:transparent url(../images/logo.png) no-repeat scroll 5px 0;
+    background:transparent url(../images/logo.png) no-repeat scroll 12px 2px;
 }
 
 /* Content */
@@ -89,10 +91,10 @@ a.sitename{
 
 /* Breadcrumb */
 nav#breadcrumb {
-    font-size: 0.7em; 
+    font-size: 11px; 
     background-color: #f0f0f0;
     display: none;
-    padding: 2px;
+    padding: 5px 6px;
 }
 nav#breadcrumb ul li {
     display: inline;
@@ -120,7 +122,7 @@ nav#breadcrumb li#home span {
 
 /* Navigation bar */
 nav#toolbar {
-    font-size: 0.8em;
+    font-size: 12px;
     text-align: center;
     background-color: #F0F0F0;
     font-weight: bold;
@@ -156,11 +158,11 @@ nav#toolbar li.active{
 /* user */
 .moodbile-user-options {
     position:absolute;
-    right:5px;
+    right:10px;
     top:0;
 }
 #user-welcome {
-    font-size: 0.7em;
+    font-size: 11px;
     text-shadow: 0 1px 0 #fff;
 }
 #user-profile {
@@ -179,29 +181,27 @@ nav#toolbar li.active{
     z-index:100; 
 }
 #user-nav {
-    background-image:url("../images/login-op-decoration.png");
-    background-position: 85px top;
-    background-repeat:no-repeat;
     position:absolute;
     right:0;
-    top:53px;
+    top:57px;
     z-index:9999;
 }
-#user-nav ul{
+#user-nav ul {
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-box-shadow:0 1px 3px #000;
     -webkit-box-shadow:0 1px 3px #000;
-    background-image:url("../images/80-trans-background.png");
+    background-color: #000; 
     margin-top:15px;
     padding:5px;
     width:100px;
+    opacity: 0.8;
 }
-#user-nav ul li{}
+
 #user-nav ul li a{color: #fff;font-weight: bold;display: block;}
 
 /* Avatar */
-#info-viewer .moodbile-avatar, #wrapper .avatar {
+#info-viewer .moodbile-avatar, #wrapper .moodbile-avatar {
     height:35px;
     overflow:hidden;
     position:absolute;
@@ -209,26 +209,34 @@ nav#toolbar li.active{
     background-repeat: no-repeat;
     background-position: 0;
 }
-#info-viewer .content.user .avatar{margin-top: -7px;margin-left: -7px;-webkit-border-radius: 0;-moz-border-radius: 0;border: 0;border-right: 1px solid #999;}
+#info-viewer .content.user .moodbile-avatar{
+    margin-top: -7px;
+    margin-left: -7px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border: 0;
+    border-right: 1px solid #999;
+}
 
 /* Sections */
 section {
     position: relative;
 }
-section a{
+section a {
     font-weight: bold;
     text-decoration: none;
-    color: #6F6F6F;
+    color: #4F4F4F;
     display: block;
-    padding: 10px 5px;
+    padding: 10px;
+    font-size: 14px;
 }
-section div{
+section div, div[data-type='data-group'] div{
     padding: 5px;
     border-bottom: 1px solid #e6e6e6;
     padding: 0;
     position: relative;
 }
-section div div, #info-viewer div, #info-viewer div div div {
+div[data-type='courses'] div, #info-viewer div, #info-viewer div div div, div[data-type='data-group'], div[data-type='data-group'] div div, .moodbile-filter-box{
     border-bottom: 0;
 }
 
@@ -255,20 +263,27 @@ section div div, #info-viewer div, #info-viewer div div div {
     padding:5px;
 }
 #info-viewer header {
-    height: 35px;
+    height: 40px;
     position: relative;
     background-color: #f0f0f0;
     border-top: 1px solid #fff;
     border-bottom: 1px solid #e6e6e6;
 }
 #info-viewer header h1 {
-    color:#333333;
-    font-size:0.8em;
-    min-height:35px;
-    line-height:1.2em;
+    color: #6f6f6f;
+    font-size: 14px;
+    line-height: 18px;
     padding: 2px 40px;
-    text-align:center;
-    text-shadow:0 1px 0 #E6E6E6;
+    text-align: center;
+    text-shadow:0 1px 0 #fff;
+}
+#info-viewer header h2 {
+    color:#333333;
+    font-size: 11px;
+    line-height: 10px;
+    padding: 2px 40px;
+    text-align: center;
+    text-shadow:0 1px 0 #fff;
 }
 #info-viewer header .back {
     padding:0;
@@ -314,8 +329,11 @@ section div div, #info-viewer div, #info-viewer div div div {
 }
 
 /* Authentication */
-.moodbile-authentication{
+.moodbile-authentication {
     padding: 5px;
+}
+.moodbile-authentication div {
+    border: 0;
 }
 .moodbile-authentication .login-form #login-button, .section.authentication .login-form button {
     background: -webkit-gradient(linear, left top, left bottom, from(#7DB3DF), to(#336699));
@@ -325,7 +343,7 @@ section div div, #info-viewer div, #info-viewer div div div {
     -webkit-border-radius: 10px; 
     -moz-border-radius: 10px;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 16px;
     padding: 5px;
     margin: 10px auto;
 }
@@ -338,14 +356,14 @@ section div div, #info-viewer div, #info-viewer div div div {
     clear:both;
     color:#999999;
     display:block;
-    font-size:1em;
+    font-size: 16px;
     font-style:italic;
     margin:5px auto;
     text-align:center;
     width:200px;   
 }
-.moodbile-authentication .site-summary {padding: 5px; font-size: 0.8em;}
-.moodbile-authentication .site-summary p {padding: 5px 0;}
+.moodbile-authentication .moodbile-site-summary {padding: 5px; font-size: 13px;}
+.moodbile-authentication .moodbile-site-summary p {padding: 5px 0;}
 .moodbile-authentication input.invalid-input {
     color: #F00 !important;
     border-color: #f00 !important;
@@ -359,13 +377,13 @@ section div div, #info-viewer div, #info-viewer div div div {
 /* Grades */
 .moodbile-grades .grade .grade-title {
     padding: 10px;
-    font-size: 0.9em;
+    font-size: 14px;
 } 
 .moodbile-grades .grade .grade-num {
     -moz-border-radius:10px;
     -webkit-border-radius: 10px;
     background-color:#D6D6D6;
-    font-size:0.6em;
+    font-size:10px;
     height:20px;
     line-height:20px;
     position:absolute;
@@ -380,40 +398,47 @@ section div div, #info-viewer div, #info-viewer div div div {
 .moodbile-grades .grade .grade-num.green {}
 .moodbile-grades .grade .grade-num.red {}
 
+/* Eventos */
+.moodbile-event-link div, .moodbile-course-title div{
+    padding:0 20px !important;
+}
+.moodbile-event-link div:last-child, .moodbile-course-title div:last-child{
+    font-size: 12px;
+    font-weight: normal;
+    color: #4f4f4f;
+}
+.moodbile-event details .intro {
+    color: #333;
+}
+
 /* Foros */
-.moodbile-post-link {
+.moodbile-discussion-link {
     padding: 0 !important;
 }
-.moodbile-post-replyes {
-    display: none;
-}
-.moodbile-post-reply {
-    border: 0;
-}
-.moodbile-post-reply a{
+.moodbile-post a{
     min-height: 35px !important;
     padding:0 !important;
     background-color: #FFFCEF;
     border-top:1px solid #E6E6E6;
     border-bottom:1px solid #E6E6E6;
 }
-.moodbile-post-reply a:first-child{
+.moodbile-post a:first-child{
     border-top: 0;
 }
-.moodbile-post-header div, .moodbile-post-reply-header div{
+.moodbile-discussion-header div, .moodbile-post-header div{
     margin-left: 40px;
 }
-.moodbile-post-autor, .moodbile-post-reply-autor {
-    font-size:0.7em;
+.moodbile-discussion-autor, .moodbile-post-autor {
+    font-size:11px;
     font-weight:normal;
     padding-top:3px !important;
 }
-.moodbile-post-reply-msg {
+.moodbile-post-msg {
     padding:10px 10px 10px 40px !important;
-    font-size: 0.8em;
+    font-size: 12px;
     text-align: justify;
 }
-.moodbile-post-reply-button {
+.moodbile-post-button {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border:1px solid #000;
@@ -447,7 +472,7 @@ section div div, #info-viewer div, #info-viewer div div div {
 footer {
     text-align: center;
     font-style: italic;
-    font-size: 0.7em;
+    font-size: 11px;
     padding: 10px;
 }
 footer p {
@@ -457,19 +482,50 @@ footer p {
 footer a#about {
     font-weight: bold;
 }
-#info-viewer .about {
-    font-size: 0.7em;
-    font-style: italic;
-    text-align: justify;
-    line-height: 1.5em;
+
+/* Filter */
+.moodbile-filter {
+    width:100%;
+    z-index: 8888;
+    border: 0;
+    padding: 0;
+}
+.moodbile-filter-box {
+    height: 40px;
+    background-color: #000;
+    opacity: 0.8;
+}
+#moodbile-filter-opts {
+    border: 0;
+    margin: 0;
+    padding:10px;
+}
+#moodbile-filter-opts select{
+    width: 100%;
+    
+}
+#moodbile-filter-toggle {
+    background-color:#000000;
+    border:0 none;
+    color:#FFFFFF;
+    opacity:0.8;
+    margin: 0;
+    padding:5px;
+    float: right;
+    margin-right: 20px;
+    -moz-border-radius-bottomleft: 5px;
+    -moz-border-radius-bottomright: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
 }
 
 /* icons */
 .moodbile-icon {
-    display:inline-block;
+    float:left;
     height:16px;
-    margin-right:5px;
+    margin-right: 5px;
     width:16px;
+    display:block;
 }
 .icon-pdf{
     background:transparent url(../images/icons.gif) no-repeat scroll 0 -1px;
@@ -490,11 +546,25 @@ footer a#about {
     background:transparent url(../images/icons.gif) no-repeat scroll 0 -100px;
 }
 .icon-info {
-    background:transparent url(../images/icons.gif) no-repeat scroll 0 -122px;
-    margin-right:16px;
+    -moz-border-radius:10px;
+    -webkit-border-radius: 10px;
+    background: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(0,51,102)),color-stop(1, rgb(51,102,153)));
+    background: -moz-linear-gradient(center bottom,rgb(0,51,102) 0%,rgb(51,102,153) 100%);
+    color: #fff;
+    font-family:times New Roman;
+    font-weight: bold;
+    line-height:20px;
+    text-align:center;
+    text-shadow:0 -1px 0 #333;
+    -moz-box-shadow:0 1px 3px #999;
+    -webkit-box-shadow:0 1px 3px #999;
+    height:20px;
+    width:20px;
+    margin-right: 15px;
+    letter-spacing: normal;
 }
 .moodbile-courses .icon-info {
-    margin-right:0;
+    margin-right:5px;
 }
 .icon-email {
     background:transparent url(../images/icons.gif) no-repeat scroll 0 -180px;
@@ -512,6 +582,18 @@ footer a#about {
     background:transparent url(../images/icons.gif) no-repeat scroll 0 -198px;
     text-indent:-9999px;
 }
+.icon-user-op-decoration {
+    border-color:transparent transparent #000000 transparent;
+    border-style: solid;
+    border-width:10px 5px;
+    float:right;
+    margin-right:13px;
+    margin-top:-5px;
+    opacity:0.8;
+    height:0px;
+	width:0px;
+	display: block !important;
+}
 
 /* Other */
 .arrow {
@@ -525,7 +607,7 @@ footer a#about {
 .msg {
     border:1px solid;
     display:block;
-    font-size:0.7em;
+    font-size:12px;
     margin:5px;
     padding:5px;
     text-align:center;
@@ -536,46 +618,29 @@ footer a#about {
 
     /*Collapsible*/
 a.collapse { 
-    position: absolute;
-    right:0;
-    top:2px;
+    padding:0;
+    position:absolute;
+    right:5px;
+    top:9px;
 }
 .collapsed, .collapsed div{ display: none; }
 .summary a{font-weight: normal; position: relative;}
-.collapse-icon{
-    background:url("../images/expanded_collapsed.png") no-repeat scroll center bottom transparent;
-    height:25px;
-    opacity:0.75;
-    position:absolute;
-    right:10px;
-    top:5px;
-    width:25px;
-}
-.collapse-icon-expanded{background-position: center bottom;}
-.collapse-icon-collapsed{background-position: center top;}
 
     /* extra information */
-.info {
-    position: relative;
-    display: block;
-}
-.info div:not(.more) {
-    font-size:0.7em;
-    padding:0 10px 7px 27px;
+details div{
+    font-size:12px;
+    padding:0 20px 7px 30px !important;
     text-align: justify;
 }
-.more {padding:2px 5px;top:-28px !important;}
-.date {font-size:0.8em;font-weight:normal;line-height:17px; padding: 10px 20px;}
-
     /* Other */
-.moodbile-course-name {
+.moodbile-course-name, .moodbile-event-date {
     background-color:#F0F0F0;
     border-bottom:1px solid #E6E6E6;
     border-top:1px solid #FFFFFF;
-    color:#333333;
+    color:#8f8f8f;
     display:block;
-    font-size:0.8em;
-    padding:2px 26px;
+    font-size:12px;
+    padding:2px 10px !important;
     position:static !important;
     text-shadow:0 1px 0 #FFFFFF;
 }
