--- a/moodbile/themes/default/css/style.css
+++ b/moodbile/themes/default/css/style.css
@@ -693,6 +693,7 @@ details div{
     width:100%;
     font-style: normal;
     font-family: Verdana, Arial, Helvetica;
+    resize: none;
 }
 .moodbile-edit-in-place button {
     background:none repeat scroll 0 0 transparent;
