Source code update 21/07/10

--- a/moodbile/misc/templates/authentication.tpl.html
+++ b/moodbile/misc/templates/authentication.tpl.html
@@ -3,8 +3,8 @@
         <form>
             <input type="text" id="login-form-input-user" />
             <input type="password" id="login-form-input-pass"/>
+            <input type="submit" id="login-button" />
         </form>
-        <button id="login-button" type="submit"></button>
     </div>
     <div class="login-info"></div>
 </div>
