--- a/moodbile/misc/templates/info-viewer.tpl.html
+++ b/moodbile/misc/templates/info-viewer.tpl.html
@@ -6,10 +6,10 @@
                 <h2></h2>
             </hgroup>
             <span class="opts">
-                <button class="back">
+                <button class="back" type="button">
                     <span class="moodbile-icon icon-back"></span>
                 </button>
-                <button class="close">
+                <button class="close" type="button">
                     <span class="moodbile-icon icon-close"></span>
                 </button>
             </span>
