--- a/moodbile/misc/templates/new-discussion.tpl.html
+++ b/moodbile/misc/templates/new-discussion.tpl.html
@@ -2,7 +2,7 @@
     <form>
         <div class="moodbile-discussion-subject">
             <label for="subject"></label>
-            <input id="subject" type="text" placeholder="Subject" />
+            <input id="subject" type="text" />
         </div>
         
         <div class="moodbile-discussion-message">
@@ -10,6 +10,6 @@
             <textarea id="discussion-message"></textarea>
         </div>
         
-        <button type="submit"><span></span></button>
+        <input type="submit" />
     </form>
 </div>
